src/encoded/static/scss/encoded/modules/_static-pages.scss
/**********************************************************
		Common static page components & styles
		These extend _typography.scss somewhat
		to increase margins around headings.
***********************************************************/


.static-section-entry,
.home-content-area {

	font-size: 15px;
	font-size: 15.75px;
	line-height: 1.65rem;

	h1, h2, h3, h4, h5, h6 {
		> i.icon-link {
			font-size: 1rem;
			opacity: 0;
			vertical-align: middle;
			margin-left: 7px;
		}

		&:hover > i.icon-link {
			opacity: 0.3;
			cursor: pointer;
		}
	}

	h2 {
		font-weight: 400;
		margin-top: 30px;
		margin-bottom: 20px;
	}

	&:first-child {
		h2:first-child, h3:first-child, h4:first-child {
			margin-top: 0px;
		}
	}

	h3 {
		margin-top: 30px;
    	margin-bottom: 20px;
	}

	h4 {
		margin-top: 20px;
	}

	.heading-with-bottom-border,
	.homepage-section-title,
	.section-title {
		margin-bottom: 20px;
		margin-top: 20px;
		padding-bottom: 15px;
		border-bottom: 1px solid #f4f4f4;

		&h5 { font-size: 20px; margin-bottom: 10px; padding-bottom: 8px; }

		> i.icon-link {
			opacity: 0.15;
		}

		&.can-collapse {
			cursor: pointer;
			padding-top: 15px;
			padding-left: 5px;
			border-top: 1px solid #f4f4f4;
			transition: border-color .5s, background-color .5s, padding-left .5s;
			&.closed {
				border-color: #ddd;
				background-color: rgba(0,0,0,0.04);
				padding-left: 15px;
			}
			> i.icon-plus, > i.icon-minus {
				font-size: 1rem;
			}
		}

	}

	h2.section-title, h2.homepage-section-title {
		font-size: 32px;
		line-height: 38px;
		&.can-collapse {
			font-size: 27px;
			> i.icon-plus, > i.icon-minus {
				font-size: 24px;
			}
		}
	}

	h3.section-title, h3.homepage-section-title {
		font-size: 24px;
		margin-bottom: 10px;
		padding-bottom: 8px;
		&.can-collapse {
			padding-top: 8px;
			> i.icon-plus, > i.icon-minus {
				font-size: 1.35rem;
			}
		}
	}

	img {
		max-width: 100%;
	}

	ol, ul {
		> li {
			> ul, > ol {
				margin-bottom: 5px;
			}
			> p + ul,
			> p + ol {
				// Reverses p { margin-bottom: 10px } style
				margin-top: -5px;
			}
		}
	}

}

.static-section-entry {

	&:not([id]) .section-title > i.icon-link {
		display: none;
	}

}




/**********************************************************
		Table of Contents
***********************************************************/


.table-of-contents {

	position: relative;

	@include media-breakpoint-up(xl){
		position: fixed;
		margin: 0 -10px;
		padding: 0 10px;
		padding-bottom: 60px;
		top: 82px;
		transition: top .3s ease-out, margin-top .5s ease-out, max-width .5s ease-out;
		overflow-y: auto;
		right: 10px;
		//max-width: 340px;
		border-left: 1px solid #eee;
		padding-left: 16px;
		body.scrolled-past-top & {
			top : 42px;
		}

		max-width: 650px;
		&.width-bounded {
			max-width: 340px;
		}

		//ol, .next-previous-pages-section {
		//	max-width: 320px;
		//}
	}

	@include media-breakpoint-down(lg){
		> ol.inner {
			border-top: 1px solid #eee;
		}
	}

	.toc-title {
		font-weight: 400;
		border-bottom: 1px solid #ddd;
		padding-bottom: 10px;
		margin-bottom: 0;
	}

	ol {
		padding-left: 20px;
		> li {
			line-height: 1.25rem;
			transition: color .5s 0s;
			color: #888;
			position: relative;
			font-weight: 400;

			&[data-depth="0"] {
				padding-top: 0;
			}

			&[data-depth="1"]:first-child {
				//margin-top: 8px;
				a { border-top: none; }
			}

			&[data-depth="3"],
			&[data-depth="4"],
			&[data-depth="5"],
			&[data-depth="6"] {
				font-size: 0.9rem;
			}
			&:last-child {
				margin-bottom: 0;
			}
			.top-of-page {
				display: block;
				white-space: nowrap;
				overflow: hidden;
				text-overflow: ellipsis;
				color: #999;
				margin-bottom: 3px;
				&.with-border-bottom {
					padding-bottom: 7px;
					margin-bottom: 7px;
					border-bottom: 1px solid #eee;
				}

				> small {
					display: none;
					line-height: 1rem;
					&:before {
						content: "|";
						margin: 0 7px 0 3px;
						color: #ccc;
					}
				}

				.expand-button-container {
					padding-top: 2px;
				}

				i.icon-angle-up {
					display: none;
					color: #888;
					text-align: center;
					width: 20px;
					position: relative;
					z-index: 2;
					float: left;
					padding-top: 0px;
					padding-bottom: 0px;
					margin-right: 2px;
					line-height: 24px;
				}
				&:hover {
					> small {
						display: inline;
						opacity: 1;
					}
					i.icon {
						color: #000;
					}
				}
			}

			a {
				display: block;
				transition: color .5s 0s;
				padding: 5px 0px 5px 22px;
				border-top: 1px dotted transparent;
				border-bottom: 1px dotted transparent;
				margin-bottom: 0;
				margin-top: 0;
				margin-left: -20px;
				&:focus {
					text-decoration: none;
					color: $link-color;
				}
				&:hover {
					text-decoration: none;
					color: #042d50;
					//box-shadow: 0 6px 7px -8px rgba(0,0,0,0.5);
					transition: color 0s;
				}
			}

			> div.title-link-wrapper {
				position: relative;
				> a {
					display: inline-block;
					vertical-align: middle;
				}
				> i.icon {
                    position: absolute;
					//left: -40px;
					top: 50%;
					margin-top: -9px;
					font-size: 0.85rem;
					cursor: pointer;
					width: 15px;
					height: 15px;
					line-height: 16px;
					vertical-align: middle;
					text-align: center;
					//border: 1px solid transparent;
					transform: scale3d(1,1,1);
					transition: transform .3s, color .3s;

					//left: -70px;
					//margin-left: 14%;
					left: -36px;

					&:hover {
						cursor: pointer;
						//border-color: initial;
						color: #000;
						transform: scale3d(1.2, 1.2, 1.2);
					}
				}
			}

			&[data-recursion-depth="1"] > div.title-link-wrapper {
				> a {
					padding-bottom: 7px;
				}
			}

			&.active {
				font-weight: 700;
				color: #000;
				> * {
					font-weight: 400;
				}
				&.top[data-depth="0"] > .top-of-page > div.title-link-wrapper {
					> a {
						color: #000;
					}
				}
				> div.title-link-wrapper > a{
					color: #000;
				}
			}

			&.active > a,
			&.active > span > a,
			&:focus > a,
			&:focus > span > a {
				color: #000;
				//text-shadow: 0 0 0;
			}
		}

	}

	.next-previous-pages-section {
		margin-top: 5px;
		&:not(:first-child){
			border-top: 1px solid #eee;
		}
	}

	> ol.inner {
		margin-bottom: 6px;
		> li:first-child {
			margin-top: 8px;
			a { border-top: none; }
		}
	}

}

/***** Static Page Breadcrumbs ******/

.breadcrumb-placeholder, .static-page-breadcrumbs {
	min-height: 55px;
}

.static-page-breadcrumbs {
	padding-top: 29px;

	&.page-has-toc {
		@include media-breakpoint-up(xl){
			width: 75%;
		}
	}

	> .static-breadcrumb {
		display: inline-block;
		vertical-align: middle;
		font-size: 0.875rem;
	}
}



/**********************************************************
		Directory of Static Pages or Sections
***********************************************************/

.static-page.static-directory-page {

	.grid-of-sections.row {

		> .grid-item > .inner {
			display: block;
			position: relative;
			text-decoration: none;
			margin-bottom: 20px;
			border: 1px solid #f0f0f0;
			padding: 8px 16px;
			background-color: #f8f8f8;
			transition: border-color .25s;
			color: $body-color;

			.title-link {
				color: $link-color;
				transition: color .25s;
			}

			&:hover {
				border-color: #ccc;
				cursor: pointer;
				.title-link {
					//text-decoration: underline;
					color: $link-hover-color;
					text-shadow: 0px 0px $link-hover-color;
				}
			}
		}

		&.with-sub-children {
			> .grid-item > .inner {

				.section-page-count {
					display: none;
				}

				@include media-breakpoint-up(md){
					height: 98px;
					.section-page-count {
						display: block;
						position: absolute;
						right: 9px;
						bottom: 5px;
						transition: opacity .25s;
						opacity: 0.33;
					}
				}


				&:hover {
					@include media-breakpoint-up(md){
						.section-page-count {
							opacity: 1;
						}
					}
				}

			}
		}

	}

	.next-previous-pages-section {
		.previous-section > h6:first-child,
		.next-section > h6:first-child {
			border-top: 1px solid #eee;
			padding-top: 15px;
		}

		h6 > a {
			font-size: 1rem;
		}
	}

}


/**********************************************************
		Misc Static Pages
***********************************************************/

// HomePage 

.homepage-wrapper {

	

	// Guest view

	.homepage-contents {
		min-height: calc(100vh - 130px);
		background: rgba(232,242,252);

		.cgap-welcome,
		.cgap-tagline {
			color: $primary-dark;
			max-width: 570px;
		}

		.cgap-welcome {
			font-size: 2.2em;
			letter-spacing: .05em;
		}

		.cgap-logo-wrapper.img-container {
			border: 2px dotted $primary-dark;
			border-radius: 100%;
			padding: 10px;
		}
		
		#homepage-login-container {
			margin-top: 1.5625rem;

			.auth0-lock-center {
				padding: 0;
				margin: 0;
				.auth0-lock-widget {
					box-shadow: 0px 10px 20px 3px rgba(33, 33, 33, 0.1);
					.auth0-lock-header-bg.auth0-lock-blur-support {
						display: none;
					}
				
					.auth0-lock-header-welcome {
						display: flex;
						justify-content: center;
						padding-top: 15px;
						.auth0-lock-name {
							color: $primary-dark;
							border-bottom: 1px solid #eeeeee;
							width: 75%;
							padding-bottom: 5px;
						}
						.auth0-lock-header-logo {
							display: none;
						}
					}
				}
			}
		}
	}


	.dashboard-header {
		height: $tabbar-height;
		position: relative;
		background-color: #fff;
		border-bottom: 1px solid #ddd;
		> .container-wide {
			height: 100%;
		}
	}

	/* User Dashboard */
	.home-dashboard-area {

		/* 100% window height - 50px footer - 81px header+border - $tabbar-height dashboard header */
		min-height: calc(100vh - 50px - 81px - #{$tabbar-height});

		.recent-cases-table-section {
			.embedded-search-container {
				.search-view-controls-and-results {
					@extend .container-wide;
				}
			}
		}
	}

	.home-content-area {

		margin-top: 15px;

		.link-block {

			> a {
				font-size: 14px;
				padding: 7px 10px;
				display: block;
				/* text-align: center; */
				font-weight: 400;
				height: 100%;
				/*
				white-space: nowrap;
				overflow: hidden;
				text-overflow: ellipsis;
				*/

				background: #f8f8f8;
				border: 1px solid rgba(0,0,0,0.0);
				width: 97%;
				transform: translate3d(3%, 0, 0);
				transition: transform .3s, border-color .5s 0.3s, width .3s;

				&:hover {
					background-color: #f4f4f4;
					border-color: rgba(0,0,0,0.05);
					transform: translate3d(0%, 0, 0);
					width: 100%;
				}

				> span {
					display: inline-block;
					vertical-align: middle;
				}

				&.browse-btn {
					/* Emulates btn-primary styling partially */
					//color: $btn-primary-color;
					//background-color: $btn-primary-bg;
					//border-color: $btn-primary-border;
					border-color: rgba(92,127,144, 0.3);
					&:hover, &:active, &.active, &:focus {
						//background-color: darken($btn-primary-bg, 8%);
						//border-color: darken($btn-primary-border, 12%);
						border-color: rgba(92,127,144, 0.8);
					}
				}

				&.external-link {
					padding-right: 20px;
					&:hover:after {
						opacity: 0.5;
					}
				}

			}

			/*
			&:last-child {
				border-right: 1px solid #ddd;
			}
			*/
		}

		.homepage-links-row {
			.links-wrapper {
				display: flex;
				.link-block:not(:first-child){
					border-left: 1px solid #eee;
				}
			}
		}

		.homepage-links-column {
			.links-wrapper {
				.link-block {
					margin-bottom: 5px; //10px;
				}
			}
		}

	}

}



// Error

.error-page{
	margin-top: 50px;
}

// Help > Get Started

.slide-display{
	padding: 20px 0px 20px 0px;
	>img{
		display: block;
		margin: auto;
	}
	>.slide-controls{
		text-align: center;
	}
}

